# notify

./: Cargo.toml  README.md
src/: app.rs  fonts.rs  main.rs  window.rs
src/res/: font_atlas.pbm
