[package]
name = "notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
atty = "0.2.14"
env_logger = "0.10.1"
log = "0.4.20"
resize = "0.8.3"
smithay-client-toolkit = "0.18.0"
wayland-client = "0.31.1"
